--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,17 @@
 body {
+    font-family: 'Amatic SC';
+    font-size: 25px;
     text-align: center;
 }
 
 h1 {
-    font-family: Monoton;
+    font-family: 'Megrim';    
     font-size: 70px;
     margin: 0.2em;
 }
 
 h2 {
+    font-family: 'Amatic SC';
     margin: 1em 0 0.25em;
 }
 
